--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Yorkshireman/fitlog/issues"
   },
-  "homepage": "https://github.com/Yorkshireman/fitlog#readme"
+  "homepage": "https://github.com/Yorkshireman/fitlog#readme",
+  "dependencies": {
+    "express": "^4.13.3"
+  }
 }
